--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "Oksil_Joo_NGO_TeamBuild",
   "version": "1.0.0",
   "description": "my first node app",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "",
